Mongo: JVM tuning