@@ -7,6 +7,15 @@
                  [org.clojure/tools.cli "0.3.3"]
                  [jepsen "0.1.1-SNAPSHOT"]
                  [org.mongodb/mongodb-driver "3.2.2"]]
+  :jvm-opts ["-Xmx16g"
+             "-XX:+UseConcMarkSweepGC"
+             "-XX:+UseParNewGC"
+             "-XX:+CMSParallelRemarkEnabled"
+             "-XX:+AggressiveOpts"
+             "-XX:+UseFastAccessorMethods"
+             "-XX:MaxInlineLevel=32"
+             "-XX:MaxRecursiveInlineLevel=2"
+             "-server"]
   :main jepsen.mongodb.runner
   :aot [jepsen.mongodb.runner
         clojure.tools.logging.impl])
